--- a/style.css
+++ b/style.css
@@ -66,3 +66,9 @@ body {
     font-size: 17px;
     color: white;
 }
+
+#totalTips {
+    font-size: 20px;
+    margin-top: 5px;
+    text-align: center;
+}
